server-config/firewall/nodes/user.rules
*filter
:ufw-user-input - [0:0]
:ufw-user-output - [0:0]
:ufw-user-forward - [0:0]
:ufw-before-logging-input - [0:0]
:ufw-before-logging-output - [0:0]
:ufw-before-logging-forward - [0:0]
:ufw-user-logging-input - [0:0]
:ufw-user-logging-output - [0:0]
:ufw-user-logging-forward - [0:0]
:ufw-after-logging-input - [0:0]
:ufw-after-logging-output - [0:0]
:ufw-after-logging-forward - [0:0]
:ufw-logging-deny - [0:0]
:ufw-logging-allow - [0:0]
:ufw-user-limit - [0:0]
:ufw-user-limit-accept - [0:0]
### RULES ###

### tuple ### allow any 22 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 22 -j ACCEPT
-A ufw-user-input -p udp --dport 22 -j ACCEPT

### tuple ### allow any 80 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 80 -j ACCEPT
-A ufw-user-input -p udp --dport 80 -j ACCEPT

### tuple ### allow any any 167.88.34.185 any 0.0.0.0/0 out
-A ufw-user-output -d 167.88.34.185 -j ACCEPT

### tuple ### reject tcp 25 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 25 -j REJECT --reject-with tcp-reset

### tuple ### allow any 53 0.0.0.0/0 any 0.0.0.0/0 DNS - out
-A ufw-user-output -p tcp --dport 53 -j ACCEPT -m comment --comment 'dapp_DNS'
-A ufw-user-output -p udp --dport 53 -j ACCEPT -m comment --comment 'dapp_DNS'

### tuple ### allow any 80 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 80 -j ACCEPT
-A ufw-user-output -p udp --dport 80 -j ACCEPT

### tuple ### allow any 443 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 443 -j ACCEPT
-A ufw-user-output -p udp --dport 443 -j ACCEPT

### tuple ### allow any 22 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 22 -j ACCEPT
-A ufw-user-output -p udp --dport 22 -j ACCEPT

### tuple ### allow tcp 6667,6697 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp -m multiport --dports 6667,6697 -j ACCEPT

### tuple ### allow udp 60000:61000 0.0.0.0/0 any 0.0.0.0/0 mosh - in
-A ufw-user-input -p udp -m multiport --dports 60000:61000 -j ACCEPT -m comment --comment 'dapp_mosh'

### tuple ### allow tcp 25 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 25 -j ACCEPT

### tuple ### reject tcp 587 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 587 -j REJECT --reject-with tcp-reset

### tuple ### allow tcp 110 0.0.0.0/0 any 0.0.0.0/0 POP3 - out
-A ufw-user-output -p tcp --dport 110 -j ACCEPT -m comment --comment 'dapp_POP3'

### tuple ### allow tcp 995 0.0.0.0/0 any 0.0.0.0/0 POP3S - out
-A ufw-user-output -p tcp --dport 995 -j ACCEPT -m comment --comment 'dapp_POP3S'

### tuple ### allow tcp 143 0.0.0.0/0 any 0.0.0.0/0 IMAP - out
-A ufw-user-output -p tcp --dport 143 -j ACCEPT -m comment --comment 'dapp_IMAP'

### tuple ### allow tcp 993 0.0.0.0/0 any 0.0.0.0/0 IMAPS - out
-A ufw-user-output -p tcp --dport 993 -j ACCEPT -m comment --comment 'dapp_IMAPS'

### END RULES ###

### LOGGING ###
-A ufw-after-logging-input -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw-after-logging-output -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw-after-logging-forward -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-I ufw-logging-deny -m state --state INVALID -j RETURN -m limit --limit 3/min --limit-burst 10
-A ufw-logging-deny -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw-logging-allow -j LOG --log-prefix "[UFW ALLOW] " -m limit --limit 3/min --limit-burst 10
### END LOGGING ###

### RATE LIMITING ###
-A ufw-user-limit -m limit --limit 3/minute -j LOG --log-prefix "[UFW LIMIT BLOCK] "
-A ufw-user-limit -j REJECT
-A ufw-user-limit-accept -j ACCEPT
### END RATE LIMITING ###
COMMIT
