server-config/firewall/nodes/user6.rules
*filter
:ufw6-user-input - [0:0]
:ufw6-user-output - [0:0]
:ufw6-user-forward - [0:0]
:ufw6-before-logging-input - [0:0]
:ufw6-before-logging-output - [0:0]
:ufw6-before-logging-forward - [0:0]
:ufw6-user-logging-input - [0:0]
:ufw6-user-logging-output - [0:0]
:ufw6-user-logging-forward - [0:0]
:ufw6-after-logging-input - [0:0]
:ufw6-after-logging-output - [0:0]
:ufw6-after-logging-forward - [0:0]
:ufw6-logging-deny - [0:0]
:ufw6-logging-allow - [0:0]
:ufw6-user-limit - [0:0]
:ufw6-user-limit-accept - [0:0]
### RULES ###

### tuple ### allow any 22 ::/0 any ::/0 in
-A ufw6-user-input -p tcp --dport 22 -j ACCEPT
-A ufw6-user-input -p udp --dport 22 -j ACCEPT

### tuple ### allow any 80 ::/0 any ::/0 in
-A ufw6-user-input -p tcp --dport 80 -j ACCEPT
-A ufw6-user-input -p udp --dport 80 -j ACCEPT

### tuple ### reject tcp 25 ::/0 any ::/0 out
-A ufw6-user-output -p tcp --dport 25 -j REJECT --reject-with tcp-reset

### tuple ### allow any 53 ::/0 any ::/0 DNS - out
-A ufw6-user-output -p tcp --dport 53 -j ACCEPT -m comment --comment 'dapp_DNS'
-A ufw6-user-output -p udp --dport 53 -j ACCEPT -m comment --comment 'dapp_DNS'

### tuple ### allow any 80 ::/0 any ::/0 out
-A ufw6-user-output -p tcp --dport 80 -j ACCEPT
-A ufw6-user-output -p udp --dport 80 -j ACCEPT

### tuple ### allow any 443 ::/0 any ::/0 out
-A ufw6-user-output -p tcp --dport 443 -j ACCEPT
-A ufw6-user-output -p udp --dport 443 -j ACCEPT

### tuple ### allow any 22 ::/0 any ::/0 out
-A ufw6-user-output -p tcp --dport 22 -j ACCEPT
-A ufw6-user-output -p udp --dport 22 -j ACCEPT

### tuple ### allow tcp 6667,6697 ::/0 any ::/0 out
-A ufw6-user-output -p tcp -m multiport --dports 6667,6697 -j ACCEPT

### tuple ### allow udp 60000:61000 ::/0 any ::/0 mosh - in
-A ufw6-user-input -p udp -m multiport --dports 60000:61000 -j ACCEPT -m comment --comment 'dapp_mosh'

### END RULES ###

### LOGGING ###
-A ufw6-after-logging-input -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw6-after-logging-output -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw6-after-logging-forward -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-I ufw6-logging-deny -m state --state INVALID -j RETURN -m limit --limit 3/min --limit-burst 10
-A ufw6-logging-deny -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw6-logging-allow -j LOG --log-prefix "[UFW ALLOW] " -m limit --limit 3/min --limit-burst 10
### END LOGGING ###

### RATE LIMITING ###
-A ufw6-user-limit -m limit --limit 3/minute -j LOG --log-prefix "[UFW LIMIT BLOCK] "
-A ufw6-user-limit -j REJECT
-A ufw6-user-limit-accept -j ACCEPT
### END RATE LIMITING ###
COMMIT
